# pastax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  demo.ipynb  environment.yml  meshes.ipynb  mkdocs.yml  myst.yml  pyproject.toml  readthedocs.yaml  requirements.txt
.github/workflows/: docs.yml  tests.yml
docs/: api.md  conf.py  demo.ipynb  getting_started.ipynb  myst-requirements.txt  requirements.txt  tutorial.ipynb
docs/_sphinx/: api.rst  conf.py  forcing.rst  geo.rst  grid.rst  interpolation.rst  metric.rst  score.rst  solver.rst
docs/_static/: custom.css  myst-extra.css  pastax_fav.py  pastax_logo.py
docs/api/: evaluation.md  grid.md  simulator.md  trajectory.md  utils.md
pastax/: __init__.py
pastax/dynamics/: __init__.py  _linear_uv.py  _smagorinsky_diffusion.py
pastax/evaluation/: __init__.py  _evaluation.py  _evaluator.py  _metric.py  evaluator.py
pastax/grid/: __init__.py  _coordinate.py  _coordinates.py  _field.py  _grid.py  _utils.py  dataset.py
pastax/gridded/: __init__.py  _coordinate.py  _field.py  _gridded.py  _operators.py
pastax/simulator/: __init__.py  _base_simulator.py  _diffrax_simulator.py  _simulator.py  simulator.py
pastax/simulator/dynamics/: __init__.py  _linear_uv.py  smagorinsky_diffusion.py
pastax/simulator/simulators/: __init__.py  linear_ssc.py  smagorinsky_diffusion.py
pastax/trajectory/: __init__.py  _set.py  _state.py  _states.py  _timeseries.py  _timeseries_ensemble.py  _trajectory.py  _trajectory_ensemble.py  _unitful.py  state.py  trajectory.py  trajectory_ensemble.py
pastax/utils/: __init__.py  _geo.py  _unit.py  unit.py
sealagrangiax/: __init__.py
sealagrangiax/evaluation/: __init__.py  _evaluation.py  _evaluator.py  _metric.py  evaluator.py
sealagrangiax/experiment/: _experiment.py
sealagrangiax/experiment/experiments/: __init__.py  diffrax_smag_duacs_gdp6h.py  parcels_duacs_gdp6h.py
sealagrangiax/grid/: __init__.py  _coordinates.py  _grid.py  _utils.py  dataset.py
sealagrangiax/gridded/: __init__.py  _coordinates.py  _dataset.py  _gridded.py  _utils.py
sealagrangiax/input/: __init__.py  _drifter.py  _field.py  _preprocessing.py  _preprocessor.py
sealagrangiax/input/drifter_preprocessors/: __init__.py  gdp.py
sealagrangiax/input/drifters/: __init__.py  gdp.py
sealagrangiax/input/field_preprocessors/: __init__.py  jaxparrow.py
sealagrangiax/input/fields/: __init__.py  duacs.py
sealagrangiax/io/: __init__.py  _s3filesystem.py  _zarr_store.py
sealagrangiax/simulator/: __init__.py  _diffrax_simulator.py  _simulator.py
sealagrangiax/simulator/simulators/: __init__.py  diffrax.py  linear_ssc.py  naive.py  parcels.py  smagorinsky_diffusion.py
sealagrangiax/timeseries/: __init__.py  _ensemble.py  _set.py  _state.py  _timeseries.py  ensemble.py  set.py  state.py  timeseries.py
sealagrangiax/trajectory/: __init__.py  _batch.py  _ensemble.py  _set.py  _state.py  _timeseries.py  _timeseries_ensemble.py  _unitful.py  _utils.py  batch.py  ensemble.py  state.py  timeseries.py  trajectory.py  trajectory_ensemble.py
sealagrangiax/utils/: __init__.py  geo.py  unit.py  what.py
src/pastax/: __init__.py  _safe_math.py  _types.py  forcing.py  geo.py  grid.py  interpolation.py  metric.py  score.py  solver.py
tests/: conftest.py  test_forcing.py  test_geo.py  test_grid.py  test_interpolation.py  test_mask.py  test_metric.py  test_safe_math.py  test_score.py  test_solver.py  test_velocity_interp.py
