[project]
name = "pastax"
version = "0.1.0"
description = "Differentiable Lagrangian simulator for ocean surface trajectories (JAX/Equinox)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "jax>=0.4.30",
    "equinox>=0.11.0",
    "jaxtyping>=0.2.30",
]

[project.optional-dependencies]
forcing = ["xarray>=2024.1.0", "zarr>=2.17.0", "netcdf4>=1.6.0", "numpy>=1.26.0"]
sde = ["lineax>=0.0.7"]
docs = [
    "cartopy>=0.22",
    "cmocean>=4.0",
    "ipykernel>=6.29",
    "jupyter-server>=2.14",
    "matplotlib>=3.8",
    "netcdf4>=1.6.0",
    "numpy>=1.26.0",
    "optimistix>=0.0.9",
    "sphinx>=7.3",
    "sphinx-ext-mystmd",
    "xarray>=2024.1.0",
    "zarr>=2.17.0"
]
dev = [
    "cartopy>=0.22",
    "cmocean>=4.0",
    "ipykernel>=6.29",
    "jupyter-server>=2.14",
    "lineax>=0.0.7",
    "matplotlib>=3.8",
    "netcdf4>=1.6.0",
    "numpy>=1.26.0",
    "optimistix>=0.0.9",
    "pyright>=1.1.360",
    "pytest>=8.0.0", 
    "ruff>=0.4.0", 
    "sphinx>=7.3",
    "sphinx-ext-mystmd",
    "xarray>=2024.1.0",
    "zarr>=2.17.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pastax"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# jaxtyping shape annotations (e.g. Float[Array, "time lat lon"]) are string
# subscripts, not forward references; F722/F821/UP037 all misfire on them.
# See https://docs.kidger.site/jaxtyping/faq/
ignore = ["F722", "F821", "UP037"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src/pastax"]
strict = false
